# VCFclass

./: LICENSE  README.md  manifest.in  requirements.txt  setup.cfg  setup.py  vcfClass.py
VCFclass/: VCFclass.py  filter.py
VCFclass/VCFclass.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: api.rst  conf.py  index.rst  requirements.txt  usage.rst
docs/source/: api.rst  conf.py  installation.rst  usage.rst
