[metadata]
name = VCFclass
version = 0.2
author = Joseph Lalli
author_email = lalli@wisc.edu
description = A python class to automate common vcf workflows and integrate vcf files with other python packages.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/josephlalli/vcfclass
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
    Documentation = https://vcfclass.readthedocs.io/en/latest/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = VCFclass
packages = find:
python_requires = >=3.6

[options.packages.find]
where = VCFclass